metadata-objects/extracted/unpackaged/objects/A3_Integration_Credential__mdt.object
<CustomObject>
    <description>Info about A3 Integration Credentials to connect on WS.</description>
    <fields>
        <fullName>DeleteOrder__c</fullName>
        <label>DeleteOrder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution__c</fullName>
        <label>Service Distribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy__c</fullName>
        <label>Service Energy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModifyOrder__c</fullName>
        <label>Modify Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Auth__c</fullName>
        <label>Service Auth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Create_Account__c</fullName>
        <label>Service Create Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Create_Order__c</fullName>
        <label>Service Create Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <label>Service Support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>A3 Integration Credential</label>
    <pluralLabel>A3 Integration Credentials</pluralLabel>
</CustomObject>